[package]
name = "git_commit_count"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 如何“使用”或导入本地Rust文件？ - 问答 - 云+社区 - 腾讯云: https://cloud.tencent.com/developer/ask/200651
print_time={path="../print_time"}
